fix: enhance countdown timer styling for better visibility

--- a/style.css
+++ b/style.css
@@ -221,8 +221,11 @@ a:hover {
   margin-bottom: 10px;
 }
 
+
+
 #countdown-timer {
   font-size: 1.5rem;
-  font-weight: 700;
+  font-weight: 1000;
   color: var(--red);
+  font-size: 50px;
 }
